--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "ejs": "^3.1.6",
     "express": "^4.17.3",
     "express-ejs-layouts": "^2.5.1",
-    "mongoose": "^6.3.0"
+    "mongoose": "^6.3.0",
+    "passport": "^0.5.2",
+    "passport-local": "^1.0.0"
   }
 }
